media/plex-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: plex
    app.kubernetes.io/component: plex
    app.kubernetes.io/instance: media
    app.kubernetes.io/part-of: plex
  name: plex
  namespace: media
spec:
  host: plex.apps.homelab.csfreak.com
  port:
    targetPort: pms
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: plex
    weight: 100
  wildcardPolicy: None
